--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.16.0",
         "axios": "^0.21",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
@@ -22,6 +23,7 @@
     "dependencies": {
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.0.2"
+        "react-router-dom": "^6.0.2",
+        "react-beautiful-dnd": "^13.1.0"
     }
 }
