--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.16.0",
         "axios": "^0.21",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
