--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
+    "/js/event-create.js": "/js/event-create.js?id=5ac6bff66cb978c55a37",
     "/css/main.css": "/css/main.css?id=68b329da9893e34099c7"
 }
