--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,1 +1,5 @@
-
+{
+    "/js/search.js": "/js/search.js?id=933ebbd1d5fd643924ab",
+    "/js/event-create.js": "/js/event-create.js?id=b08ba51f977453f83768",
+    "/css/main.css": "/css/main.css?id=919456901fc2cdc9524a"
+}
