--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,1 +1,5 @@
-
+{
+    "/js/search.js": "/js/search.js?id=59561e08d1a3233b794c",
+    "/js/event-create.js": "/js/event-create.js?id=516c06dc0e3334f82416",
+    "/css/main.css": "/css/main.css?id=7df5e7c7ffb171d017dd"
+}
