--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,1 +1,5 @@
-
+{
+    "/js/search.js": "/js/search.js?id=38cb34ff522f51474f4b",
+    "/js/event-create.js": "/js/event-create.js?id=e7b76b04760414bd25e1",
+    "/css/main.css": "/css/main.css?id=7df5e7c7ffb171d017dd"
+}
