--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # Added ignore for development
 /public/
+/public/css
+/public/js
 /public/css/main.css
 /public/js/event-create.js
 /public/js/search.js
