--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.0.2"
+        "react-router-dom": "^6.0.2",
+        "react-spinners-kit": "^1.9.1"
     }
 }
