--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /public/css
 /public/js
 /public/css/main.css
-public/css/main.css.map
+/public/css/main.css.map
 /public/js/event-create.js
 /public/js/search.js
 /public/js/search.js.map
